--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
+    "@taquito/taquito": "^8.0.6-beta.0",
     "core-js": "^3.8.3",
+    "date-fns": "^2.19.0",
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
