--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js"
+    "lint": "yarn lint:js",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
@@ -16,7 +17,8 @@
     "@taquito/taquito": "^8.0.6-beta.0",
     "core-js": "^3.8.3",
     "date-fns": "^2.19.0",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "push-dir": "^0.4.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^5.0.0",
